// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSlot Changes between custom and pre-defined times when button link clicked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="time-slot-label"
        for="hearing-time-08:30"
      >
        Hearing Time
      </label>
      <div>
        <span>
          <button
            class="time-slot-button-toggle cf-btn-link usa-button"
            type="button"
          >
            Choose a 
            custom time
          </button>
        </span>
      </div>
      <div
        class="time-slot-button-container"
      >
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  8:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  9:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  10:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  11:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  12:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  1:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  2:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  3:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <label
      class="time-slot-label"
      for="hearing-time-08:30"
    >
      Hearing Time
    </label>
    <div>
      <span>
        <button
          class="time-slot-button-toggle cf-btn-link usa-button"
          type="button"
        >
          Choose a 
          custom time
        </button>
      </span>
    </div>
    <div
      class="time-slot-button-container"
    >
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                8:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                9:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                10:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                11:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                12:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                1:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                2:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                3:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSlot Matches snapshot with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="time-slot-label"
        for="hearing-time-undefined"
      >
        Hearing Time
      </label>
      <div>
        <span>
          <button
            class="time-slot-button-toggle cf-btn-link usa-button"
            type="button"
          >
            Choose a 
            custom time
          </button>
        </span>
      </div>
      <div
        class="time-slot-button-container"
      >
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  8:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  9:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  10:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  11:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  12:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  1:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  2:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  3:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <label
      class="time-slot-label"
      for="hearing-time-undefined"
    >
      Hearing Time
    </label>
    <div>
      <span>
        <button
          class="time-slot-button-toggle cf-btn-link usa-button"
          type="button"
        >
          Choose a 
          custom time
        </button>
      </span>
    </div>
    <div
      class="time-slot-button-container"
    >
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                8:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                9:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                10:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                11:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                12:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                1:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                2:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                3:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TimeSlot Selects a time slot when clicked 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="time-slot-label"
        for="hearing-time-08:30"
      >
        Hearing Time
      </label>
      <div>
        <span>
          <button
            class="time-slot-button-toggle cf-btn-link usa-button"
            type="button"
          >
            Choose a 
            custom time
          </button>
        </span>
      </div>
      <div
        class="time-slot-button-container"
      >
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  8:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button time-slot-button-selected usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  9:30 AM EDT
                </div>
                <div />
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  10:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  11:30 AM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
        <div
          class="time-slot-container"
        >
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  12:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  1:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  2:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
          <span>
            <button
              class="usa-button-secondary time-slot-button usa-button"
              type="button"
            >
              <div>
                <div
                  style="flex: 1;"
                >
                  3:30 PM EDT
                </div>
                <div>
                  <i
                    class="fa fa-angle-right time-slot-arrow"
                  />
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <label
      class="time-slot-label"
      for="hearing-time-08:30"
    >
      Hearing Time
    </label>
    <div>
      <span>
        <button
          class="time-slot-button-toggle cf-btn-link usa-button"
          type="button"
        >
          Choose a 
          custom time
        </button>
      </span>
    </div>
    <div
      class="time-slot-button-container"
    >
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                8:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button time-slot-button-selected usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                9:30 AM EDT
              </div>
              <div />
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                10:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                11:30 AM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
      <div
        class="time-slot-container"
      >
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                12:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                1:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                2:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
        <span>
          <button
            class="usa-button-secondary time-slot-button usa-button"
            type="button"
          >
            <div>
              <div
                style="flex: 1;"
              >
                3:30 PM EDT
              </div>
              <div>
                <i
                  class="fa fa-angle-right time-slot-arrow"
                />
              </div>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
